<resources>
    <string name="app_name">News Hub</string>
    <string name="api_key">2b62324bfb41493bb49e3bb19073d484</string>
    <string name="app_id">ca-app-pub-7833510354697604~1969788534</string>
    <string name="cnn">CNN</string>
    <string name="bbc">BBC</string>
    <string name="cnbc">CNBC</string>
    <string name="reuters">Reuters</string>
    <string name="the_guardian_uk">The Guardian(UK)</string>
    <string name="the_huffington_post">The Huffington Post</string>
    <string name="the_new_york_times">The New York Times</string>
    <string name="the_wall_street_journal">The Wall Street Journal</string>
    <string name="the_washington_post">The Washington Post</string>
    <string name="usa_today">USA Today</string>
    <string name="network_connection_error_message">Network unavailable, please check your network connection!</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="news_not_available_warning">No news available.</string>
    <string name="news_source_added">added to My News.</string>
    <string name="news_source_deleted">deleted from My News.</string>
    <string name="empty_text_view_delete_fragment">Currently, there are no news sources selected. To select a source, please go to the News Source tab.</string>
    <string name="all_news_sources_added_empty_text_view">All news sources have been added to My News</string>
    <string name="news_time">News Released Time</string>
    <string name="add_favorite_fail_msg">Problem with adding news to My Favorite.</string>
    <string name="add_favorite_success_msg">News saved to My Favorite.</string>
    <string name="saved_news">Saved News</string>
    <string name="delete_news">Delete News</string>
    <string name="about_label">About</string>
    <string name="about_content">News Hub hosts news headlines that are currently published on a range of news sources and
                                 blogs, for example, CNN, CNBC, BBC, etc. This is your one-stop shop for all the top news all
                                 around the world. With News Hub, you can save yourself a lot of time from switching app to app
                                 to get the news you need.</string>
    <string name="powered_by">Powered by newsapi.org</string>
    <string name="news_source">News Source</string>
    <string name="select_news_source_msg">Please select a news source below.</string>
    <string name="skip">Skip</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="add_news_source">add news source</string>
    <string name="news_image">news image</string>
    <string name="bookmark">bookmark</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="radio_button">radio button</string>
    <string name="powered_by_google">powered_by_google</string>
    <string name="delete_all_news">Delete all news?</string>
    <string name="error_with_deleting_news">Error with deleting news.</string>
    <string name="news_deleted">News deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="no_news_to_delete">Currently, there are no news to delete.</string>
    <string name="no_bookmarked_news">Currently, you have no bookmarked news.</string>
    <string name="cannot_query_unknown_uri_msg">Cannot query unknown URI </string>
    <string name="insertion_is_not_supported_for">"Insertion is not supported for " + uri</string>
    <string name="deletion_is_not_supported_for">Deletion is not supported for</string>
    <string name="top_news_flag">top</string>
    <string name="authentication_failed_msg">Authentication failed.</string>
    <string name="must_implement_news_update_listener">must implement NewsUpdateListener</string>
    <string name="text_plain_type">text/plain</string>
    <string name="delete_this_news_warning">Delete this news?</string>
    <string name="android_switcher">android:switcher:</string>
    <string name="must_implement_data_update_listener">must implement DataUpdateListener</string>
    <string name="scheme_content">content</string>

</resources>
