<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_saved_news"
        android:orderInCategory="1"
        android:title="@string/saved_news"
        android:icon="@drawable/ic_bookmark_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/about_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_in"
        android:orderInCategory="3"
        android:title="@string/sign_in"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="4"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

</menu>