<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/saved_news_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/saved_news_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:contentDescription="@string/news_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/saved_news_time_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="8"
                    tool:text="@string/news_time" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorBackground"
                    android:src="@drawable/ic_delete_24dp"
                    android:contentDescription="@string/delete" />

            </LinearLayout>

            <TextView
                android:id="@+id/saved_news_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tool:text="@string/news_title" />

            <TextView
                android:id="@+id/saved_news_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tool:text="@string/news_description" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>



